--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "start-nodemon": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "rm -rf build && cd ../fullstackopen-exercises/Exercises/part2/phonebook && npm run build && cp -r build ../../part3/backend/ && cp -r ../../part3/backend/build ./",
+    "build:ui": "rm -rf build && cd ../fullstackopen-exercises/Exercises/part2/phonebook && npm run build && cp -r build ../../../../fullstackopen-exercises/Exercises/part3/backend/ && cp -r ../../../../fullstackopen-exercises/Exercises/part3/backend/build ../../../../fso-part3-exercise/",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "author": "",
