--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start-nodemon": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../fullstackopen-exercises/Exercises/part2/phonebook && npm run build && cp -r build ../../../../fullstackopen-exercises/Exercises/part3/backend/ && cp -r ../../../../fullstackopen-exercises/Exercises/part3/backend/build ../../../../fso-part3-exercise/",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
+    "deploy:full": "npm run build:ui && npm run lint:fix && git add . && git commit -m uibuild && git push",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +20,11 @@
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@stylistic/eslint-plugin-js": "^4.0.1",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0"
   }
 }
